@@ -16,7 +16,7 @@ USE_RUBY="ruby21 ruby23"
 inherit eutils ruby-ng user systemd
 
 MY_PV="v${PV/_/-}"
-MY_GIT_COMMIT="bcd02e0d75d7a934ee18d11643c1eaca434cf17b"
+MY_GIT_COMMIT="09cedb5f68b5cdb1b2e2a08ccf4505a847e02155"
 
 DESCRIPTION="GitLab is a free project and repository management application"
 HOMEPAGE="https://about.gitlab.com/"
@@ -27,7 +27,7 @@ RESTRICT="mirror"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86 ~arm ~arm64"
 IUSE="kerberos mysql +postgres +unicorn systemd rugged_use_system_libraries"
 
 ## Gems dependencies:
@@ -54,9 +54,9 @@ CDEPEND="
 	virtual/pkgconfig"
 COMMON_DEPEND="
 	${GEMS_DEPEND}
-	~dev-vcs/gitlab-shell-3.5.0
+	~dev-vcs/gitlab-shell-3.6.6
 	>=dev-vcs/git-2.7.4
-	~dev-vcs/gitlab-workhorse-0.8.2
+	~dev-vcs/gitlab-workhorse-0.8.5
 	kerberos? ( !app-crypt/heimdal )
 	rugged_use_system_libraries? ( net-libs/http-parser dev-libs/libgit2:0/24 )"
 DEPEND="
@@ -80,6 +80,9 @@ ruby_add_bdepend "
 RUBY_PATCHES=(
 	"01-${PN}-8.7.5-fix-sendmail-config.patch"
 	"02-${PN}-8.11.0-fix-redis-config-path.patch"
+	"03-${PN}-8.12.7-database.yml.patch"
+	"04-${PN}-8.12.7-fix-check-task.patch"
+	"05-${PN}-8.12.7-replace-sys-filesystem.patch"
 )
 
 MY_NAME="gitlab"
@@ -89,10 +92,6 @@ DEST_DIR="/opt/${MY_NAME}"
 CONF_DIR="/etc/${MY_NAME}"
 LOGS_DIR="/var/log/${MY_NAME}"
 TEMP_DIR="/var/tmp/${MY_NAME}"
-
-# When updating ebuild to newer version, check list of the queues in
-# https://gitlab.com/gitlab-org/gitlab-ce/blob/${MY_PV}/bin/background_jobs
-SIDEKIQ_QUEUES="post_receive,mailers,archive_repo,system_hook,project_web_hook,gitlab_shell,incoming_email,runner,common,default"
 
 all_ruby_prepare() {
 	# fix paths
@@ -210,21 +209,20 @@ all_ruby_install() {
 
 	if use systemd ; then
 		ewarn "Beware: systemd support has not been tested, use at your own risk!"
-		systemd_newunit "${FILESDIR}/gitlab-8.10.6-sidekiq.service" "gitlab-sidekiq.service"
+		systemd_newunit "${FILESDIR}/gitlab-8.13.0-sidekiq.service" "gitlab-sidekiq.service"
 		systemd_dounit "${FILESDIR}/gitlab-unicorn.service"
 		systemd_dounit "${FILESDIR}/gitlab-workhorse.service"
 		systemd_dounit "${FILESDIR}/gitlab-mailroom.service"
 		systemd_dotmpfilesd "${FILESDIR}/gitlab.conf"
 	else
-		local rcscript=gitlab-sidekiq.init
-		use unicorn && rcscript=gitlab-unicorn.init
+		local rcscript=gitlab-8.13.3-sidekiq.init
+		use unicorn && rcscript=gitlab-8.13.3-unicorn.init
 
 		cp "${FILESDIR}/${rcscript}" "${T}" || die
 		sed -i \
 			-e "s|@USER@|${MY_USER}|" \
 			-e "s|@GITLAB_BASE@|${dest}|" \
 			-e "s|@LOGS_DIR@|${logs}|" \
-			-e "s|@QUEUES@|${SIDEKIQ_QUEUES}|" \
 			"${T}/${rcscript}" \
 			|| die "failed to filter ${rcscript}"
 
@@ -303,6 +301,8 @@ pkg_config() {
 			|| die "failed to setup git name and email"
 	fi
 
+	su -l ${MY_USER} -c "git config --global repack.writeBitmaps true"
+
 	# determine whether this is an update or a fresh install. we do this by
 	# checking whether the ${DEST_DIR}/.git directory exists or not
 	# 
@@ -368,6 +368,11 @@ pkg_config() {
 	elog "    sudo -u git -H bundle exec rake gitlab:env:info RAILS_ENV=production"
 	elog "    sudo -u git -H bundle exec rake gitlab:check RAILS_ENV=production"
 	elog
+	if ! use systemd ; then
+		elog "You may also run"
+		elog "    /etc/init.d/gitlab check"
+		elog " for convenience."
+	fi
 }
 
 ryaml() {
