@@ -1,3 +1,12 @@
+*gitlab-ce-8.13.5 (11 Nov 2016)
+*gitlab-ce-8.14.0_rc1 (11 Nov 2016)
+
+  11 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.13.5.ebuild,
+  +gitlab-ce-8.14.0_rc1.ebuild, -gitlab-ce-8.12.0_rc6.ebuild,
+  gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.13.5 and updated the
+  bleeding-edge ones
+
   04 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
   files/gitlab-8.13.3-sidekiq.init, files/gitlab-8.13.3-unicorn.init:
   www-apps/gitlab-ce:  fixed init script for gitlab-ce-8.13.3
